[package]
name = "flox-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flox-rust-sdk = {path = "../flox-rust-sdk"}
anyhow = "1.0.65"
tokio = { version = "1", features = ["full"] }
rnix = "0.10.2"
serde = "1.0"
serde_json = "1.0"
git2 = "0.15.0"
octocrab = "0.17.0"
dotenv = "0.15.0"
async-trait = "0.1.52"
log= "0.4.17"
env_logger = "0.9.1"
bpaf = { version = "0.7.2", features = ["derive"] }
config = "0.13.1"
dirs = "4.0.0"
